refactor(code): complete refactor for improved code consistency